# koewiba-domotic

./: .gitignore  README.md
doc/: Anforderungen_Geraete.txt  Bauteile.txt  Bussystem RS485.mm  Bussystem.txt  Hausbus.mm  Kommunikationsbeispiele.txt  Pinbelegungen.doc  ProzessorAuswahl.txt  RegisterOverview.ods
hw/: .gitignore  README.txt  bus-module_atmega328_pin-assignment_for_switches_3pole_5x.ods
hw/bus-module_atmega324/: bus-module_atmega324-cache.lib  bus-module_atmega324.kicad_pcb  bus-module_atmega324.kicad_pro  bus-module_atmega324.kicad_sch  bus-module_atmega324.net  bus-module_atmega324.pro  bus-module_atmega324.rules  bus-module_atmega324.sch  bus-module_atmega324_bom.csv  errata.txt
hw/bus-module_atmega328/: bus-module_atmega328-cache.lib  bus-module_atmega328.kicad_pcb  bus-module_atmega328.kicad_pro  bus-module_atmega328.kicad_sch  bus-module_atmega328.net  bus-module_atmega328.pro  bus-module_atmega328.sch  bus-module_atmega328_bom.csv  errata.txt
hw/bus-module_attiny1634/: bus-module_attiny1634.net  (+8 more)
sw/: .gitignore
sw/avr/unittests/: CMakeLists.txt  appconfig.h  main.c  register_tests.c  test_alarmclock.c  test_datetime.c  testpwm.c
sw/os/: CMakeLists.txt
sw/os/cmake/: GitVersion
sw/os/doc/: build_os_apps.txt  cmd_action.seq.plantuml
sw/os/include/: error_codes.h  kwb_defines.h
sw/os/kwbconfiguration/: Action.cpp  Action.h  ActionQueryModules.cpp  ActionQueryModules.h  ActionReadRegister.cpp  ActionReadRegister.h  ActionRequest.cpp  ActionRequest.h  ActionWithResponse.cpp  ActionWithResponse.h  ActionWriteRegister.cpp  ActionWriteRegister.h  Application.cpp  Application.h  CMakeLists.txt  MsgBroker.cpp  MsgBroker.h  MsgEndpoint.cpp  MsgEndpoint.h  MsgEndpointSerial.cpp  MsgEndpointSerial.h  RegisterData.cpp  RegisterData.h  RegisterInfo.cpp  RegisterInfo.h  UIAllModules.cpp  UIAllModules.h  UIConsole.cpp  UIConsole.h  UIMain.cpp  UIMain.h  UISingleModule.cpp  UISingleModule.h  action.cpp  action.h  action_handler.cpp  action_handler.h  action_helper.hpp  action_query_modules.cpp  action_query_modules.h  (+42 more)
sw/os/kwbconfiguration/reglayouts/: layout0006.json  layout0007.json  layout0009.json  layout000A.json  layout000a.json  layout000b.json  layout000c.json
sw/os/kwbfirmware/: CMakeLists.txt  firmwareupdate.c  firmwareupdate.cpp  firmwareupdate.h  ihex.c  ihex.h  kwbfirmware_main.c  kwbfirmware_main.cpp
sw/os/kwbmonitor/: CMakeLists.txt  kwbmonitor.c  kwbmonitor.h  kwbmonitor_main.c
sw/os/kwbmqttgateway/: CMakeLists.txt  kwbmqttgateway.h  kwbmqttgateway_main.c  kwbmqttgateway_main.cpp  mosquitto_ioloop_glue.c  mqtt2msg.c  mqtt2msg.cpp  msg2mqtt.c  msg2mqtt.cpp
sw/os/kwbrouter/: CMakeLists.txt  kwbrouter_main.c  kwbrouter_main.cpp  rconnserial.cpp  rconnserial.h  rconnsocketclient.cpp  rconnsocketclient.h  routeconnection.cpp  routeconnection.h  router.c  router.cpp  router.h  socketserver.cpp  socketserver.h
sw/os/kwbscheduler/: CMakeLists.txt  kwbscheduler_main.c
sw/os/kwbtest/: CMakeLists.txt  kwbtest_main.c  kwbtest_main.cpp
sw/os/libkwb/: CMakeLists.txt  bus_phy_os.c  connection.cpp  connection.h  connection_serial.cpp  connection_serial.h  connection_socket.cpp  connection_socket.h  exceptions.cpp  exceptions.h  ioloop.c  ioloop.h  jsonhelper.hpp  log.c  log.h  message.c  message.h  message_bus.c  message_bus.h  message_serial.c  message_serial.h  message_socket.c  message_socket.h  numberformat.hpp  timer_os.c  vos.c  vos.h
sw/os/libsystem/: CMakeLists.txt  getopt.h  sysconsole.c  sysconsole.h  syserror.c  syserror.h  sysgetopt.c  sysgetopt.h  sysserial.c  sysserial.h  syssocket.c  syssocket.h  sysstring.h  system.h  systhread.h  systime.c  systime.h
sw/os/shared/: bus_phy_os.c  clock_os.c  ioloop.c  ioloop.h  log.c  log.h  message.c  message.h  message_bus.c  message_serial.c  message_serial.h  message_socket.c  message_socket.h  vos.c  vos.h
sw/os/tools/: astyle.cfg  kwbmqttgateway.service  kwbrouter.service.client_template  kwbrouter.service.server_template  run_astyle.sh
sw/os/unittests/: CMakeLists.txt  test_configuration_cmd.cpp  test_configuration_module.cpp  test_configuration_modules.cpp  test_configuration_register.cpp  test_json.cpp  test_libkwb_cmd.cpp  test_libkwb_connection.cpp  test_libkwb_connection_serial.cpp  test_libkwb_connection_socket.cpp  test_libsystem_threads.c  test_libsystem_threads.cpp  test_libsystem_time.c  test_libsystem_time.cpp  tests.c  unittests_main.c  unittests_main.cpp
sw/os/vbusd/: CMakeLists.txt  vbusd_main.c  vbusd_main.c.orig
sw/src/os/: CMakeLists.txt
sw/src/os/include/: error_codes.h
sw/src/os/kwbfirmware/: firmwareupdate.c  firmwareupdate.h  ihex.h  kwbfirmware_main.c
sw/src/os/kwbmonitor/: CMakeLists.txt  kwbmonitor.c  kwbmonitor.h  kwbmonitor_main.c
sw/src/os/kwbrouter/: CMakeLists.txt  kwbrouter_main.c  router.c
sw/src/os/kwbscheduler/: CMakeLists.txt  kwbscheduler_main.c
sw/src/os/kwbtest/: kwbtest_main.c
sw/src/os/libsystem/: sysconsole.c  sysserial.c  sysserial.h  syssocket.c  syssocket.h  system.h  systhread.h  systime.c  systime.h
sw/src/os/shared/: bus_phy_os.c  clock_os.c  ioloop.c  ioloop.h  message.h  message_bus.c  message_bus.h  message_serial.c  message_serial.h  message_socket.c  message_socket.h  vos.c  vos.h
sw/src/os/vbusd/: CMakeLists.txt  vbusd_main.c
sw/tools/kwbmonitor/: .directory  CMakeLists.txt  KWBMonitorDisplay.c  KWBMonitorDisplay.h  Makefile  PortableSerialLib.c  PortableSerialLib.h  PortableSerialLibLinux.c  PortableSerialLibWindows.c  config.h  crc16.c  crc16.h  kwbmonitor.c  kwbmonitor.sln  kwbmonitor.vcxproj  kwbmonitor.vcxproj.filters  sysconsole.h  system.h  systime.c  systime.h
sw/unittests/: CMakeLists.txt  appconfig.h  pcbconfig.h  register_tests.c  testbussched.c  testihex.c  testpwm.c  unittests.kdev4
sw/unittests/testdata/ihex/: charsateol.hex  data_normal.hex  data_with_linear_offset.hex  data_with_linear_startaddress.hex  data_with_segment_offset.hex  data_with_segment_startaddress.hex  invalidchecksum.hex  invalidlinemark.hex  invalidrectype.hex  unexpected_char.hex  unexpected_eof.hex  unexpected_eol.hex
(+1007 files in other folders)
